<resources>
    <string name="app_name">Hobby Manager</string>

    <string name="habits_today">Привычки на сегодня</string>
    <string name="add_habit">Добавить привычку</string>
    <string name="edit_habit">Редактирование привычки</string>
    <string name="title_hint">Название (например, "Читать 10 минут")</string>
    <string name="type_label">Тип привычки</string>
    <string name="type_good">Полезная</string>
    <string name="type_bad">Вредная</string>
    <string name="schedule_label">Расписание</string>
    <string name="schedule_days_of_week">Дни недели</string>
    <string name="schedule_daily">Каждый день</string>
    <string name="schedule_weekly">Раз в неделю</string>
    <string name="schedule_monthly">Раз в месяц</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="limit_reached_title">Лимит привычек</string>
    <string name="limit_reached_message">Можно добавить не более 5 привычек.</string>
    <string name="ok">ОК</string>
    <string name="main_title">Привычки</string>
    <string name="day_placeholder">20</string>
    <string name="delete_habit_title">Удалить привычку?</string>
    <string name="delete_habit_message">Привычка будет удалена.</string>
    <string name="cancel">Отмена</string>
    <string name="enter_title">Введите название</string>
    <string name="select_one_day_message">Выберите хотя бы один день недели.</string>
    <string-array name="week_short">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вс</item>
    </string-array>
    <string name="statistics">Статистика</string>
    <string name="statistics_title">Статистика</string>
    <string name="done_of_total">Выполнено %1$d из %2$d</string>
</resources>